--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
 
   flutter_svg: ^1.0.3
+  font_awesome_flutter: 10.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
