--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
     sdk: flutter
 
   flutter_svg: ^1.0.3
-  font_awesome_flutter: 10.4.0
+#  font_awesome_flutter: 10.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -62,8 +62,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
-     - assets/images/onboarding_images/
+     - assets/images/splash_screen/
+     - assets/images/main_images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
